<resources>
    <string name="app_name">Evaluacion1_PDM_00095417</string>
    <string name="produc_text">Contador de Productos</string>
    <string name="usuario_text">Usuario</string>
    <string name="usuario_edit_text">Escriba el usuario aquí</string>
    <string name="correo_text">Correo Electronico</string>
    <string name="correo_edit_text">Escriba el correo aquí</string>
    <string name="enviar_text">Enviar</string>
    <string name="factura_text">Factura</string>
    <string name="share_text">Share</string>
</resources>
