<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produc_text"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/produc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Produto1 \n "/>

        <Button
            android:id="@+id/produc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Produto2 \n "/>

        <Button
            android:id="@+id/produc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Produto3 \n "/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/produc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Produto4 \n "/>

        <Button
            android:id="@+id/produc5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Produto5 \n "/>

        <Button
            android:id="@+id/produc6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Produto6 \n "/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/produc7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Produto7 \n "/>

        <Button
            android:id="@+id/produc8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Produto8 \n "/>

        <Button
            android:id="@+id/produc9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Produto9 \n "/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario_text"/>

        <EditText
            android:id="@+id/edit_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_edit_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo_text"/>

        <EditText
            android:id="@+id/edit_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_edit_text"/>

        <Button
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enviar_text"/>

    </LinearLayout>

</LinearLayout>